# trash-rs

./: Cargo.toml  LICENSE  README.md
src/: cmd.rs  main.rs
