[package]
name = "trash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
pickledb = { version = "0.5.1", default-features = false, features = ["bincode"] }
argh = "0.1.8"
pager = "0.16.0"
